[package]
name = "rust_jni"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
android_logger = "0.13"
log = "0.4"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "net", "time"] }
reqwest = { version = "0.12.4", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.108"
ctor = "0.5.0"
anyhow = "1.0.86"
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-query = "0.30"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.37", features = ["serde"] }
tokio-tungstenite = { version = "0.20.1", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
webrtc = "0.11.0"
tokio-util = { version = "0.7", features = ["codec"] }

[target.aarch64-linux-android.dependencies]
[target.armv7-linux-androideabi.dependencies]
[target.i686-linux-android.dependencies]
[target.x86_64-linux-android.dependencies]

# 发布版本的激进优化
[profile.release]
opt-level = "z"          # 最小体积
lto = true               # 链接时优化
codegen-units = 1        # 单个代码生成单元
panic = "abort"          # 直接abort
debug = false            # 无调试信息
debug-assertions = false # 无调试断言
overflow-checks = false  # 禁用溢出检查
strip = true             # 去掉符号表
rpath = false            # 禁用rpath